--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimaryAccent"
+    android:animateLayoutChanges="true"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -47,6 +48,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/btn_previous"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
@@ -62,6 +64,7 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/btn_next"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
